style: Align parallax image to left to prevent face cutoff in split layout

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -15,8 +15,8 @@
 .about-image-side {
     width: 50%;
     background-size: cover;
-    background-position: 15% center;
-    /* Pulling subject further into the left half */
+    background-position: left center;
+    /* Align image to the left of the screen */
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
